# adventofcode

./: Cargo.toml  README.md  day20.out  day20_out.txt  rust-toolchain  sizes-2.txt  sizes.txt
inputs/year2021/: day1.txt  day15.txt  day16.txt  day17.txt  day20.txt  day21.txt  day23.txt  day24.txt.opt  day25.txt  day3.txt
scripts/: day14.ipynb
src/: main.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
src/years/: mod.rs
src/years/year2015/: day8.rs
src/years/year2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  mod.rs  util.rs
src/years/year2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayTemplate.rs  dayX.rs  mod.rs  util.rs
