[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Eric van der Toorn <e.a.vandertoorn@student.tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
itertools = "0.10.1"
num_enum = "0.5.1"
modinverse = "0.1.1"
prgrs ="0.6.4"
indicatif = "0.16.2"
factorial ="0.2.0"
fnv="1.0.7"